crates/efr-render/src/elements/snapshots/efr_render__elements__tests__task_list_w80.snap
---
source: crates/efr-render/src/elements/tests.rs
expression: "readable(&render(markdown, &options))"
---
[ ] to do
\e[32m[x]\e[0m done
[ ] a task whose text is long enough to wrap at forty columns
